version/0.12/_sources/api/solver/_autosummary/settings/initialization.rst.txt
:orphan:

.. _initialization:

initialization
==============

.. currentmodule:: ansys.fluent.core.solver.settings_231.initialization

.. autoclass:: initialization
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

======================================================   ================================================================================================

Child                                                                                                                                             Summary

======================================================   ================================================================================================
:ref:`fmg_initialize <fmg_initialize>`                                                          Initialize using the full-multigrid initialization (FMG).

:ref:`localized_turb_init <localized_turb_init>`             Localized initialization of turbulent flow variables for VOF/Mixture multiphase flow models.

:ref:`reference_frame <reference_frame_1>`                                                                      Set reference frame absolute or relative.

:ref:`fmg_options <fmg_options>`                                                                                    Enter the full-multigrid option menu.

:ref:`hybrid_init_options <hybrid_init_options>`                                                     Enter the settings for hybrid initialization method.

:ref:`patch <patch>`                                                                                                                       'patch' child.

:ref:`set_defaults <set_defaults>`                                                                                                  'set_defaults' child.

:ref:`open_channel_auto_init <open_channel_auto_init>`                                                             Open channel automatic initialization.

:ref:`fmg_initialization <fmg_initialization>`                                                      Enter the set full-multigrid for initialization menu.

:ref:`initialization_type <initialization_type>`                                                                             'initialization_type' child.

======================================================   ================================================================================================

.. rubric:: Commands

==============================================================   =============================================================================================

Command                                                                                                                                                Summary

==============================================================   =============================================================================================
:ref:`standard_initialize <standard_initialize>`                                                    Initialize the flow field with the current default values.

:ref:`hybrid_initialize <hybrid_initialize>`                                                                Initialize using the hybrid initialization method.

:ref:`initialize <initialize>`                                                                                                           'initialize' command.

:ref:`dpm_reset <dpm_reset>`                                                                                        Reset discrete phase source terms to zero.

:ref:`lwf_reset <lwf_reset>`                                                            Delete wall film particles and initialize wall film variables to zero.

:ref:`init_flow_statistics <init_flow_statistics>`                                                                                      Initialize statistics.

:ref:`init_acoustics_options <init_acoustics_options>`                                                                       'init_acoustics_options' command.

:ref:`list_defaults <list_defaults>`                                                                                                      List default values.

:ref:`init_turb_vel_fluctuations <init_turb_vel_fluctuations>`                                                     Initialize turbulent velocity fluctuations.

:ref:`show_iterations_sampled <show_iterations_sampled>`                                                                    'show_iterations_sampled' command.

:ref:`show_time_sampled <show_time_sampled>`                         Display the amount of simulated time covered by the data sampled for unsteady statistics.

:ref:`levelset_auto_init <levelset_auto_init>`                                                                                   'levelset_auto_init' command.

==============================================================   =============================================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

